hphp/test/slow/collection_classes/frozen_set/immutability3.php.expectf

Fatal error: Call to undefined method HH\ImmSet::addAll() in %s/slow/collection_classes/frozen_set/immutability3.php on line 7
